# benzaiten

./: .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflow/: pytest.yml
.github/workflows/: pytest.yml  run_pytests.yaml  run_pytests.yml
data/comp_inputs/sample2/: sample2_backing.mid  sample2_chord.csv
data/competition/sample1/: sample1_backing.mid  sample1_chord.csv
data/competition/sample3/: sample3_backing.mid  sample3_chord.csv
data/sample_wav/: embedded.mov  onehot.mov
data/tmp/: model.dio
data/train/embedded/: best_model.ckpt  best_model.pth  config.yaml  config_hydra.yaml
data/train/onehot/: best_model.ckpt  best_model.pth  config.yaml  config_hydra.yaml
data/train/working/: config_hydra.yaml
docker/: Dockerfile  docker-compose.cpu.yml  docker-compose.test.yaml  docker-compose.yaml
docs/: todo.md
notebook/: CVAE.ipynb  MusicTransformer.ipynb  tmp.ipynb
src/: config.py  config.yaml  dataset.py  factory.py  generate.py  hoge.py  model.py  preprocess.py  raw_config.py  synthesis.py  tmp.py  train.py  trainer.py  training.py  utils.py
src/model/: __init__.py  base.py  cvae.py  embedded.py  loss.py  onehot.py
src/utils/: __init__.py  visualize.py
src_fuga/: model.py  train.py  utils.py
tests/: conftest.py  test_models.py  test_preprocess.py  test_preprocessing.py  test_sample.py
tests/model/: test_cvae.py
tests/utils/: test_utils.py
