[tool.poetry]
name = "benzaiten"
version = "0.1.0"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.16"
torch = "^1.13.1"
joblib = "^1.2.0"
midi2audio = "^0.1.1"
hydra-core = "^1.3.1"
numpy = "^1.24.0"
scipy = "^1.9.3"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"
autoflake = "^2.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
